<resources>
    <string name="app_name">MyStoreClose</string>
    <string name="iniciarSesion">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="nombreUsuario">Nombre de usuario</string>
    <string name="contrasenia">Contraseña</string>
    <string name="buscarProducto">Buscar producto</string>
    <string name="agregarProducto">Agregar producto</string>
    <string name="encargosSolicitados">Encargos solicitados</string>
    <string name="modificarProducto">Modificar producto</string>
    <string name="eliminarProducto">Eliminar producto</string>
    <string name="duracionOferta">Duración de la oferta</string>
    <string name="subirImagen">Subir Imagen</string>
    <string name="aceptar">Aceptar</string>
    <string name="rechazar">Rechazar</string>
    <string name="rutEmpresa">Rut empresa</string>
    <string name="invitado">Iniciar sesión como invitado</string>
    <string name="empresaNombre">Nombre empresa</string>
    <string name="direccion">Dirección minimarket</string>
    <string name="localNombre">Nombre del local</string>
    <string name="correo">Correo electrónico</string>
    <string name="confContrasenia">Confirmar contraseña</string>
    <string name="nombreCompleto">Nombre completo</string>
    <string name="busMinimarket">Buscar minimarket</string>
    <string name="busProducto">Buscar producto</string>
    <string name="ofertaDes">Oferta destacada</string>
    <string name="inicio">Inicio</string>
    <string name="encargo">Encargo</string>
    <string name="perfil">Perfil</string>
    <string name="productos">Productos</string>
    <string name="barrabusq">¿Qué estás buscando?</string>
    <string name="misProd">Mis productos</string>
    <string name="miPerfil">Mi perfil</string>
    <string name="misEncargos">Mis encargos</string>
    <string name="miEmpresa">Mi empresa</string>
    <string name="confEncargo">Confirmar encargo</string>
    <string name="encargos">Encargos</string>
    <string name="descripcion">Descripcion</string>
    <string name="precio">Precio</string>
    <string name="precioOferta">Precio Oferta</string>
    <string name="duracionoferta">Duracion de la oferta</string>
    <string name="imagen">Imagen</string>
    <string name="filtroprecio">Filtrar por precio</string>
    <string name="filtrar">Filtrar</string>
    <string name="encargar">Encargar</string>
    <string name="cancelar">Cancelar</string>
    <string name="preciominimo">Precio mínimo</string>
    <string name="preciomaximo">Precio máximo</string>
    <string name="encargoPendiente">Pendiente</string>
    <string name="encargoEntregado">Entregado</string>
    <string name="encargoCancelado">Cancelado</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="productoFueraDelCatalogo">Agregar producto nuevo</string>
    <string name="agregarProductoAlCatalogo">Agregar producto nuevo al catálogo</string>
    <string name="nombreProducto">Nombre producto</string>
    <string name="nombre">Nombre</string>
    <string name="contraseña">Contraseña</string>
    <string name="nombreEmpresa">Nombre Empresa:</string>
    <string name="nombreMinimarket">Nombre Minimarket:</string>
    <string name="direccionMinimarket">Dirección:</string>
    <string name="numeroProductos">Cantidad de Productos:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>