<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".AgregarProductoNuevo">

    <ImageButton
        android:id="@+id/volverInicio"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="82dp"
        android:backgroundTint="#00FFFFFF"
        android:src="@drawable/flecha"
        app:tint="@color/letras"
        app:layout_constraintEnd_toStartOf="@+id/imageView9"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck"/>

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logotallersw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextProductoCatalogo"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/nombreProducto"
        android:inputType="textPersonName"
        android:textColor="@color/letras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNombreProductoCatalogo" />

    <TextView
        android:id="@+id/textViewNombreProductoCatalogo"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/nombreProducto"
        android:textAlignment="center"
        android:textColor="@color/letras"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAgregarProductoAlCatalogo" />

    <Button
        android:id="@+id/botonProductoCatalogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorBoton1"
        android:text="@string/agregarProducto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextProductoCatalogo" />

    <TextView
        android:id="@+id/textViewAgregarProductoAlCatalogo"
        android:layout_width="236dp"
        android:layout_height="87dp"
        android:layout_marginTop="16dp"
        android:text="@string/agregarProductoAlCatalogo"
        android:textAlignment="center"
        android:textColor="@color/letras"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <Button
        android:id="@+id/productos"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/colorBoton1"
        android:text="@string/productos"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/encargos1"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="49dp"
        android:backgroundTint="@color/colorBoton2"
        android:text="@string/encargos"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/perfil"
        app:layout_constraintStart_toEndOf="@+id/productos" />

    <Button
        android:id="@+id/perfil"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/colorBoton2"
        android:text="@string/perfil"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>