<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/verProd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222831"
    tools:context=".VistaMinimarketCliente">

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logotallersw" />

    <Button
        android:id="@+id/productos"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/colorBoton1"
        android:text="@string/productos"
        android:textColor="@color/letras"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/encargos1"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="49dp"
        android:backgroundTint="@color/colorBoton2"
        android:text="@string/encargo"
        android:textColor="@color/letras"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/perfil"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toEndOf="@+id/productos" />

    <Button
        android:id="@+id/perfil"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/colorBoton2"
        android:text="@string/perfil"
        android:textColor="@color/letras"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <ImageButton
        android:id="@+id/volverInicio"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/flecha"
        app:tint="#EEEEEE"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/labelNombreProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Nombre Producto"
        android:textColor="@color/letras"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView16" />

    <Button
        android:id="@+id/eliminarProd1"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/colorBoton1"
        android:text="@string/eliminarProducto"
        android:textColor="@color/letras"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/modificarProd1"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/colorBoton1"
        android:text="@string/modificarProducto"
        android:textColor="@color/letras"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textViewVerProductoImagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        android:text="@string/imagen"
        android:textColor="#EEEEEE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewVerProductoDescripcion" />

    <EditText
        android:id="@+id/editTextPrecioProductoVer"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/precio"
        android:inputType="textPersonName"
        android:textColor="@color/colorBoton1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelNombreProducto" />

    <TextView
        android:id="@+id/textViewVerProductoPrecio"
        android:layout_width="83dp"
        android:layout_height="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/precio"
        android:textColor="#EEEEEE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelNombreProducto" />

    <TextView
        android:id="@+id/textViewVerProductoPrecioOferta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        android:text="@string/precioOferta"
        android:textColor="#EEEEEE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewVerProductoPrecio" />

    <EditText
        android:id="@+id/editTextDurOfertaProductoVer"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/duracionoferta"
        android:inputType="textPersonName"
        android:textColor="@color/colorBoton1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPrecioOfertaProductoVer" />

    <EditText
        android:id="@+id/editTextPrecioOfertaProductoVer"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/precioOferta"
        android:inputType="textPersonName"
        android:textColor="@color/colorBoton1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPrecioProductoVer" />

    <TextView
        android:id="@+id/textViewVerProductoDuracionOF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        android:text="@string/duracionoferta"
        android:textColor="#EEEEEE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewVerProductoPrecioOferta" />

    <TextView
        android:id="@+id/textViewVerProductoDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        android:text="@string/descripcion"
        android:textColor="#EEEEEE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewVerProductoDuracionOF" />

    <EditText
        android:id="@+id/editTextDescripcionProductoVer"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/descripcion"
        android:inputType="textPersonName"
        android:textColor="@color/colorBoton1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDurOfertaProductoVer" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="93dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescripcionProductoVer"
        app:srcCompat="@drawable/logotallersw" />

</androidx.constraintlayout.widget.ConstraintLayout>