<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textoPrecioMinimo"
        android:layout_width="331dp"
        android:layout_height="40dp"
        android:text="@string/preciominimo"
        app:layout_constraintBottom_toTopOf="@+id/editTextPrecioMinimo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.796" />

    <Button
        android:id="@+id/botonCancelar"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="368dp"
        android:backgroundTint="@color/colorBoton1"
        android:text="@string/cancelar"
        android:textColor="#EEEEEE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/botonEncargar"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="368dp"
        android:backgroundTint="@color/colorBoton1"
        android:text="@string/encargar"
        android:textColor="#EEEEEE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/botonCancelar"
        app:layout_constraintHorizontal_bias="0.404"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextPrecioMinimo"
        android:layout_width="300dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="60dp"
        android:ems="10"
        android:hint="@string/preciominimo"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/botonEncargar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>